@@ -11,6 +11,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
     apt_pkg.ParseTagFile.
   * Use apt_pkg.PackageManager rather than apt_pkg.GetPackageManager.
   * Use apt_pkg.Acquire rather than apt_pkg.GetAcquire.
+  * Use mark_foo/marked_foo rather than markFoo/markedFoo.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
